增加了面向对象的内容